# shopping/controller.py
@@ -1,10 +1,17 @@
 import logging
-from flask import abort
-from typing import Any
+from typing import Any, List, Optional, Tuple
+
+from flask import jsonify
 from shopping import db_session
-from shopping.models import ShoppingList, Product
-from sqlalchemy.exc import SQLAlchemyError, NoResultFound
+from shopping.exceptions import (ProductNotFound,
+                                 ShoppingListAlreadyExistsUnderThisOwner,
+                                 ShoppingListNotFound)
+from shopping.models import Product, ShoppingList
+from sqlalchemy.exc import NoResultFound
+
 logger = logging.getLogger(__name__)
+
+FLASK_RESPONSE = Tuple[Optional[Any], int]
 
 
 def healthcheck() -> Any:
@@ -14,113 +21,116 @@ def healthcheck() -> Any:
     return {"status": "OK"}
 
 
-def get_shopping_lists():
-    """Return all shopping lists"""
+def get_db_shopping_lists() -> List[ShoppingList]:
+    """Get DB all shopping lists"""
     session = db_session.create_session()
-    shopping_lists = session.query(ShoppingList).all()
-    return [i.as_dict() for i in shopping_lists]
+    return session.query(ShoppingList).all()
 
 
-def get_db_shopping_list(owner: str):
+def get_shopping_lists() -> FLASK_RESPONSE:
+    """Get all shopping lists"""
+    shopping_lists = get_db_shopping_lists()
+    return [i.as_dict() for i in shopping_lists], 200
+
+
+def get_db_shopping_list(owner: str) -> ShoppingList:
     session = db_session.create_session()
-    shopping_list = session.query(ShoppingList).filter_by(**{"owner": owner}).one()
+    try:
+        shopping_list = session.query(ShoppingList).filter_by(**{"owner": owner}).one()
+    except NoResultFound:
+        raise ShoppingListNotFound
     return shopping_list
 
 
-def get_shopping_list(owner: str):
-    try:
-        shopping_list = get_db_shopping_list(owner)
-    except NoResultFound:
-        abort(404, "No such shopping list")
-    else:
-        return shopping_list.as_dict()
+def get_shopping_list(owner: str) -> FLASK_RESPONSE:
+    shopping_list = get_db_shopping_list(owner)
+    return jsonify(shopping_list.as_dict()), 200
 
 
-def add_shopping_list(new_shopping_list: dict) -> None:
+def add_shopping_list(new_shopping_list: dict) -> FLASK_RESPONSE:
     """Add shopping list"""
     session = db_session.create_session()
     owner = new_shopping_list["owner"]
     try:
         get_db_shopping_list(owner)
-    except NoResultFound:
+    except ShoppingListNotFound:
         pass
     else:
-        abort(400, f"Shopping List with owner: {owner} already exists")
-
+        raise ShoppingListAlreadyExistsUnderThisOwner(description=f"Shopping list already exists under this owner: {owner}")
     shopping_list = ShoppingList(owner=owner)
     session.add(shopping_list)
-    try:
-        session.commit()
-    except SQLAlchemyError:
-        abort(400, "Cant add new shopping list")
-    else:
-        logger.debug(f"Added new shopping list: {shopping_list.owner}")
+    session.commit()
+    logger.debug(f"Added new shopping list: {shopping_list.owner}")
+    return shopping_list.as_dict(), 200
 
 
-def update_shopping_list(owner: str, update_shopping_list_information: dict):
+def update_shopping_list(owner: str, update_shopping_list_information: dict) -> FLASK_RESPONSE:
     """Update shopping list"""
     session = db_session.create_session()
     session.query(ShoppingList).filter(ShoppingList.owner == owner).update(update_shopping_list_information)
     session.commit()
+    updated_shopping_list = get_db_shopping_list(owner)
+    return updated_shopping_list.as_dict(), 202
 
 
-def delete_shopping_list(owner: str) -> None:
+def delete_shopping_list(owner: str) -> Any:
     """Delete shopping list"""
     session = db_session.create_session()
     session.query(ShoppingList).filter(ShoppingList.owner == owner).delete()
     session.commit()
+    return 200
 
 
-def get_db_product(name: str):
+def get_db_product(name: str) -> Product:
     """Get DB Product"""
     session = db_session.create_session()
-    product = session.query(Product).filter_by(**{"name": name}).one()
+    try:
+        product = session.query(Product).filter_by(**{"name": name}).one()
+    except NoResultFound:
+        raise ProductNotFound
     return product
 
 
-def get_product(name: str):
+def get_product(name: str) -> FLASK_RESPONSE:
     """Get Product"""
-    try:
-        product = get_db_product(name)
-    except NoResultFound as e:
-        abort(404, "No such shopping list")
-    else:
-        return product.as_dict()
+    product = get_db_product(name)
+    return product.as_dict(), 200
 
 
-def get_db_products():
+def get_db_products() -> List[Product]:
+    """Get Db Products"""
     session = db_session.create_session()
     return session.query(Product).all()
 
 
-def get_products():
+def get_products() -> FLASK_RESPONSE:
+    """Get Products"""
     products = get_db_products()
-    return [product.as_dict() for product in products]
+    return jsonify([product.as_dict() for product in products]), 200
 
 
-def add_product(new_product: dict):
+def add_product(new_product: dict) -> FLASK_RESPONSE:
+    """Add Product to collection"""
     session = db_session.create_session()
-    name = new_product["name"]
-    owner = new_product["owner"]
-    descr = new_product["descr"]
-    is_purchased = new_product["is_purchased"]
-    try:
-        shopping_list = get_db_shopping_list(owner)
-    except NoResultFound:
-        abort(404, f"No such shopping list for {owner}")
-    else:
-        product = Product(name=name, descr=descr, shopping_list_id=shopping_list.id, is_purchased=is_purchased)
-        session.add(product)
-        session.commit()
+    product = Product(**new_product)
+    session.add(product)
+    session.commit()
+    return product.as_dict(), 200
 
 
-def update_product(name: str, update_product_information: dict):
+def update_product(name: str, update_product_information: dict) -> FLASK_RESPONSE:
+    """Update Product"""
     session = db_session.create_session()
     session.query(Product).filter(Product.name == name).update(update_product_information)
     session.commit()
+    updated_product = get_db_product(name)
+    return updated_product.as_dict(), 202
 
 
-def delete_product(name: str):
+def delete_product(name: str) -> Any:
+    """Delete Product"""
     session = db_session.create_session()
     session.query(Product).filter(Product.name == name).delete()
     session.commit()
+    logger.debug(f"Deleted product: {name}")
+    return 200
